Deprecated Warnings: Alle Deprecated Number-Konstruktor-Aufrufe beseitigt (deprecated seit seit Java 9). Das kommt jetzt nur hoch, weil wir seit kurzem OpenJDKs > Version 9 nutzen. Größtenteils die ganzen Integer, Double, Long...-Konstruktoren durch Autoboxing (seit Java1.5) ersetzt.